# kubos

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/workflows/: android-latest.yml  android.yml  ios.yml  linux.yml  macos.yml  rust.yml  ubuntu-latest.yml  windows.yml
assets/models/: basecube.glb  impossible_cube.gltf  kubos.glb
src/: chunk.rs  client.rs  lib.rs  lobby.rs  main.rs  server.rs  skybox.rs
wix/: main.wxs
