# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kubos"
version = "0.1.0"
edition = "2021"
authors = [ "Jason S. Clary <jason@clary.org>" ]
build = "build.rs"
autobins = false

[lib]
# We need cdylib for Android, staticlib for iOS and lib (or rlib/dylib) for everything else.
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "kubos"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = [ "bevy/jpeg" ]

[target.'cfg(target_os = "android")'.features]
default = [ "bevy/android_share_stdcxx", "bevy_egui/open_url" ]

[dependencies]
bevy = "0.11.0"
bevy_quinnet = "0.5.0"
bevy_screen_diagnostics = "0.3.0"
image = "0.24.7"
winit = "0.28.6"

[target.'cfg(any(target_os = "android", target_os = "ios", target_arch = "wasm32"))'.dependencies]
bevy_egui = { version = "0.21.0", default-features = false, features = ["open_url", "default_fonts"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies]
bevy_egui = { version = "0.21.0"  }
bevy_console = "0.8.0" # forces arboard usage in bevy_egui which doesn't build for Android

[target.'cfg(any(target_env = "msvc", target_env = "gnu"))'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "KUBOS.EXE"
LegalCopyright = "Copyright © 2023 Kubos Studios"

[package.metadata.android]
package = "org.kubos"
apk_name = "kubos"
assets = "assets"
resources = "assets/android-res"
# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
strip = "strip"
build_targets = ["aarch64-linux-android", "x86_64-linux-android", "armv7-linux-androideabi"]#, "arm-linux-androideabi" ] cargo-apk doesn't support the last one?

[package.metadata.android.sdk]
target_sdk_version = 34

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "kubos"
